Set desktop file name

Enables correct taskbar icon on Wayland

BUG: 450180
FIXED-IN: 3.4.4